--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="enter_a_title_for_crime">Enter a title for crime</string>
     <string name="details">Details</string>
     <string name="solved">Solved</string>
+    <string name="add">Add</string>
 </resources>
