--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="details">Details</string>
     <string name="solved">Solved</string>
     <string name="add">Add</string>
+    <string name="choose_suspect">Choose Suspect</string>
+    <string name="send_crime_report">Send Crime Report</string>
 </resources>
